Add folder Data to store data that will be used

--- a/MainFigures.ipynb
+++ b/MainFigures.ipynb
@@ -35,9 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure_path = '/work/home/L.Teyu/ReductionRatio/'\n",
-    "data_path = '/work6/L.Teyu/ReductionRatio/'\n",
-    "shp_path = '/work6/L.Teyu/Schulz2017/'\n",
+    "figure_path = '/work/home/L.Teyu/Reduction_Ratio/Figures'\n",
+    "data_path = '/work/home/L.Teyu/Reduction_Ratio/Data'\n",
     "dpi = 600"
    ]
   },
@@ -72,7 +71,7 @@
     "(c) Relationship between Incoming Solar Radiation and Total Cloud Amount \n",
     "(d) Relationship between Incoming Solar Radiation and Visibility\n",
     "'''\n",
-    "Fig1(dpi, figure_path, data_path, shp_path)"
+    "Fig1(dpi, figure_path, data_path)"
    ]
   },
   {
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +146,7 @@
     "Figure S2\n",
     "Map of occurence counts of low and high outliers of maximum incoming solar radiation for each month (a-l) \n",
     "'''\n",
-    "FigS1_S2(dpi, figure_path, data_path, shp_path)"
+    "FigS1_S2(dpi, figure_path, data_path)"
    ]
   },
   {
@@ -261,7 +260,7 @@
     "(c) and (f) Boxplots of MCF, non-MCF, non-Forest 3 categories\n",
     "(a-c) Spring(March, April, May), (d-f) Autumn(September, October, November)\n",
     "'''\n",
-    "Fig3_S3(dpi, figure_path, data_path, shp_path)"
+    "Fig3_S3(dpi, figure_path, data_path)"
    ]
   },
   {
@@ -307,7 +306,7 @@
     "(a) Map of Reduction Ratio when NE happen\n",
     "(b) Map of Reduction Ratio when there's no weather events happen\n",
     "'''\n",
-    "Fig4_S4(dpi, figure_path, data_path, shp_path)"
+    "Fig4_S4(dpi, figure_path, data_path)"
    ]
   }
  ],
@@ -327,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
